--- a/manifest.json
+++ b/manifest.json
@@ -6,12 +6,12 @@
     "theme_color":"white",
     "display" : "standalone",
     "icons" : [{
-        "src" : "img/icon-192x192.png",
+        "src" : "icon-192x192.png",
         "sizes" : "192x192",
         "type" :"image/png"
     },
     {
-        "src" : "img/icon-512x512.png",
+        "src" : "icon-512x512.png",
         "sizes" : "512x512",
         "type" :"image/png"
     }
