--- a/manifest.json
+++ b/manifest.json
@@ -2,16 +2,17 @@
     "name":"Zeal of The Lofty",
     "short_name":"ZOTL",
     "start_url":".",
-    "background_color":"cornsilk",
-    "theme_color":"white",
+    "background_color":"#818182",
+    "theme_color":"#818181",
     "display" : "standalone",
     "icons" : [{
-        "src" : "icon-192x192.png",
+        "src" : "img/icon-192x192.png",
         "sizes" : "192x192",
-        "type" :"image/png"
+        "type" :"image/png",
+        "purpose":"any maskable"
     },
     {
-        "src" : "icon-512x512.png",
+        "src" : "img/icon-512x512.png",
         "sizes" : "512x512",
         "type" :"image/png"
     }
