--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name":"Zeal of The Lofty",
-    "short_name":"ZOTL",
+    "name":"ثانويه عروه بن الزبير بنين",
+    "short_name":"عروه بن الزبير",
     "start_url":".",
     "background_color":"#818182",
     "theme_color":"#818181",
